# dist/api.yml
@@ -727,6 +727,33 @@ paths:
         "400":
           description: somting went wrong  
 
+  /league/Referees/:
+    get:
+      tags:
+        - league
+      summary: Get all available Referees
+      responses:
+        "200":
+          description: all available Referees
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/HomePage/properties/Referee"
+
+  /league/Stadiums/:
+    get:
+      tags:
+        - league
+      summary: Get all available Stadiums
+      responses:
+        "200":
+          description: all available Stadiums
+          content:
+            application/json:
+              schema:
+                type: string
+                example: "MCH Arena"
+
   # /search/filter/{gameId}:
   #   delete:
   #     tags:
